# xcdoc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  LICENSE  README.md
.github/workflows/: action-debug.yml  build-archive.yml  build-linux.yml  main.yml  test.yml
cmake/: re2c.cmake  test_res_generator.cmake  yacc.cmake
src/: CMakeLists.txt  MacroExpandMacroHelper.h  MacroExpandMacroHelper.re  PreCompiledLexer.h  PreCompiledLexer.re  def.re  main.cc  string_slice_view.cc  string_slice_view.h  utils.h
src/CppParser/: CommandParser.h  CommandParserImpl.cc  CommandParserImpl.h  CompileSystem.cc  CompileSystem.h  CompileUnit.cc  CompileUnit.h  MacroExpandMacroHelper.h  MacroExpandMacroHelper.re  PreCompiledLexer.h  PreCompiledLexer.re  Source.y  SourceLexer.h  SourceLexer.re  def.re
src/CppParser/symbolsystem/: ClassSymbolImpl.cc  ClassSymbolImpl.h  CppSymbol.cc  CppSymbol.h
src/frontend/commandline/: CMakeLists.txt  app.cc
src/frontend/commandline/command/: class.h  root.h
src/frontend/commandline/core/: command.cc  command.h
src/utils/: public.cc  public.h  string_slice_view.cc  string_slice_view.h
tests/: CMakeLists.txt  PreCompileLexer.cc  re.re  string_slice_view.cc
tests/CppParser/: CommandParser.cc  CppParser.cc  PreCompileLexer.cc  SourceLexer.cc
tests/res/: CMakeLists.txt  compile_commands.json  test.cc  testPreCompileLexer.cc
tests/res/SourceLexer/: test.cc
tests/res/src/: CMakeLists.txt  test.cc  test.h
tests/utils/: string_slice_view.cc
triplets/: clang-libcxx.cmake  x64-linux-clang-libcxx.cmake
