cmake_minimum_required(VERSION 3.15)
project(xcdoc LANGUAGES CXX C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_definitions(__xcdoc_debug__)
endif()
include(cmake/re2c.cmake)
find_package(nlohmann_json CONFIG REQUIRED)

option(BUILD_TESTING "Build tests" ON)
add_subdirectory(src)
if(BUILD_TESTING)
    enable_testing()
    add_subdirectory(tests)
endif()
