cmake_minimum_required(VERSION 3.15)
project(xcdoc LANGUAGES CXX C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_definitions(__xcdoc_debug__)
    find_package(magic_enum CONFIG REQUIRED)
    link_libraries(magic_enum::magic_enum)
endif()
include(cmake/re2c.cmake)
include(cmake/yacc.cmake)
find_package(nlohmann_json CONFIG REQUIRED)

if(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -stdlib=libc++")
endif()

option(ENABLE_TESTING "Build tests" OFF)
add_subdirectory(src)
if(ENABLE_TESTING)
    enable_testing()
    add_subdirectory(tests)
endif()
