cmake_minimum_required(VERSION 3.15)
project(xcdoc_test_demo LANGUAGES CXX C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_subdirectory(src)
find_program(NINJA_EXE NAMES ninja)
if(NOT NINJA_EXE OR NINJA_EXE STREQUAL "NINJA_EXE-NOTFOUND")
    message(WARNING "Ninja not found, using make instead")
    if(UNIX)
        find_program(MAKE_EXE NAMES make)
        set(TEST_GENERTOR_TYPE "Unix Makefiles")
    elseif(WIN32)
        find_program(MAKE_EXE NAMES mingw32-make)
        set(TEST_GENERTOR_TYPE "MinGW Makefiles")
    endif()
else()
    set(TEST_GENERTOR_TYPE "Ninja")
endif()
message(STATUS "CMAKE_COMMAND:  ${CMAKE_COMMAND}")
message(STATUS "NINJA_EXE: ${NINJA_EXE}")
message(STATUS "MAKE_EXE: ${MAKE_EXE}")
